menu visibility and sonar fix

--- a/arc-web/src/main/webapp/css/style.css
+++ b/arc-web/src/main/webapp/css/style.css
@@ -12,6 +12,23 @@ body {
     line-height: 1.25rem;
 }
 
+.menu-input {
+	border-bottom: 1px solid #000000;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    background-color: transparent;
+    width: 100%;
+    text-align: inherit;
+}
+
+.font-weight-lightbold {
+	font-weight: 600 !important;
+}
+
+.menu-selected {
+	background-color : #e5e5e5;
+}
 
 /* Override bootstrap css */
 
@@ -124,7 +141,7 @@ li.nav-item.active {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #000022;
+    color: #000000;
 }
 
 li.nav-item {
@@ -1117,7 +1134,7 @@ body.help {
 }
 
 .menu-box-style {
-    background-color: #fafafa;
+    background-color: #fcfcfc;
     border: 1px solid #f0f0f0;	
 }
 
